@@ -2,6 +2,7 @@ libmpdclient 2.15 (not yet released)
 * support MPD protocol 0.21
   - search: support search expressions
   - search: descending sort
+  - search: support sorting by "Last-Modified"
   - song: audio format
 * fix `-Wrestrict` compiler warning
 
